# queryline

./: .dockerignore  .env.example  .gitignore  CONTRACTS.md  DEPLOY.md  Dockerfile  README.md  RUNBOOK.md  RUNNING.md  docker-compose.yml  docker.env.example  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  tsconfig.json  vite.config.ts  wsgi.py
.githooks/: pre-commit
.github/workflows/: release.yml
app/: __init__.py  db.py  errors.py  paths.py
app/adapters/: __init__.py  _common.py  base.py  registry.py  secrets.py
app/api/: auth.py  (+13 more)
desktop/: build_backend.py  generate_icon.py  server.py  text-to-sql-backend.spec
docker/: entrypoint.sh
docs/: index.html
electron/: app-data.cjs  backend.cjs  debug.cjs  main.cjs  ollama.cjs  preload.cjs  updater.cjs
scripts/: check-staged-secrets.sh  dev.mjs  prepare-icons.mjs  start-browser.mjs  start-desktop.mjs
sqlite_databases/: README.md  register_via_api.py  seed.py
src/: App.tsx  main.tsx  vite-env.d.ts
test_data/: README.md  docker-compose.yml  register_via_api.py  seed.py  test_connections.py
tests/: conftest.py  test_adapter_contract.py  test_admin_data_sources.py  test_admin_query_log.py  test_admin_schema.py  test_auth.py  test_chart_spec_service.py  test_conversations.py  test_diagnostic_logs.py  test_e2e_chat.py  test_feedback.py  test_llm_settings.py  test_local_system_auth.py  test_ollama_client.py  test_query_execution_service.py  test_secrets.py  test_setup.py  test_speech_transcription.py  test_sql_generation_service.py  test_stream_helpers.py  test_users.py
(+151 files in other folders)
